// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayWrappers|NavBar/LinkWrapper Standard 1`] = `
<nav
  className="sc-bxivhb dGSKYG"
>
  <a
    aria-current="page"
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG active"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    HOME
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Causes"
    onClick={[Function]}
  >
    CAUSES
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Posts"
    onClick={[Function]}
  >
    POSTS
  </a>
  <a
    aria-current={null}
    className="sc-htpNat gaSQtN sc-bxivhb dGSKYG"
    href="/Profile"
    onClick={[Function]}
  >
    PROFILE
  </a>
</nav>
`;

exports[`Storyshots DisplayWrappers|NavBar/LogoWrapper Standard 1`] = `
<div
  className="sc-ifAKCX fnZSTt"
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onClick={[Function]}
>
  <svg
    onClick={[Function]}
  >
    Logo.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBar Standard 1`] = `
<div
  className="sc-kkGfuU drQifv"
>
  <div
    className="sc-EHOje kOcwsO"
  >
    <div
      className="sc-ifAKCX fnZSTt sc-EHOje kOcwsO"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
    >
      <svg
        onClick={[Function]}
      >
        Logo.svg
      </svg>
    </div>
    <nav
      className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
    >
      <a
        aria-current="page"
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        HOME
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Causes"
        onClick={[Function]}
      >
        CAUSES
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Posts"
        onClick={[Function]}
      >
        POSTS
      </a>
      <a
        aria-current={null}
        className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
        href="/Profile"
        onClick={[Function]}
      >
        PROFILE
      </a>
    </nav>
  </div>
  <div
    className="sc-bwzfXH ilzmva"
  >
    <input
      className="sc-bdVaJa bGHooc"
      placeholder="Search"
      type="text"
    />
  </div>
  <div
    className="sc-gqjmRU cgcBHJ"
  >
    <div
      className="sc-gzVnrw bhQPgz"
    >
      <button
        className="sc-bZQynM bKeyVQ"
        onClick={[Function]}
      >
        SIGN UP
      </button>
      <button
        className="sc-bZQynM etdfXU"
        onClick={[Function]}
      >
        LOG IN
      </button>
    </div>
    <div
      className="sc-gZMcBi hhlJTS"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
      onClick={[Function]}
    >
      <div
        className="sc-iwsKbI eFRUyw"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-dnqmqq dkzfjo"
      >
        <div
          className="sc-htoDjs haDExK"
          fontSize="16px"
          height="50%"
          width="80%"
        >
          James Wheeler
        </div>
        <div
          className="sc-htoDjs ZUubs"
          fontSize="12px"
          height="50%"
          width="80%"
        >
          larkin_tr***@yahoo.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C&P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes and Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre Standard 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarLeft Standard 1`] = `
<div
  className="sc-EHOje kOcwsO"
>
  <div
    className="sc-ifAKCX fnZSTt sc-EHOje kOcwsO"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
  >
    <svg
      onClick={[Function]}
    >
      Logo.svg
    </svg>
  </div>
  <nav
    className="sc-bxivhb dGSKYG sc-EHOje kOcwsO"
  >
    <a
      aria-current="page"
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO active"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      HOME
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Causes"
      onClick={[Function]}
    >
      CAUSES
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Posts"
      onClick={[Function]}
    >
      POSTS
    </a>
    <a
      aria-current={null}
      className="sc-htpNat gaSQtN sc-bxivhb dGSKYG sc-EHOje kOcwsO"
      href="/Profile"
      onClick={[Function]}
    >
      PROFILE
    </a>
  </nav>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarRight Standard 1`] = `
<div
  className="sc-gqjmRU cgcBHJ"
>
  <div
    className="sc-gzVnrw bhQPgz"
  >
    <button
      className="sc-bZQynM bKeyVQ"
      onClick={[Function]}
    >
      SIGN UP
    </button>
    <button
      className="sc-bZQynM etdfXU"
      onClick={[Function]}
    >
      LOG IN
    </button>
  </div>
  <div
    className="sc-gZMcBi hhlJTS"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      }
    }
    onClick={[Function]}
  >
    <div
      className="sc-iwsKbI eFRUyw"
    >
      <svg>
        Userpic.svg
      </svg>
    </div>
    <div
      className="sc-dnqmqq dkzfjo"
    >
      <div
        className="sc-htoDjs haDExK"
        fontSize="16px"
        height="50%"
        width="80%"
      >
        James Wheeler
      </div>
      <div
        className="sc-htoDjs ZUubs"
        fontSize="12px"
        height="50%"
        width="80%"
      >
        larkin_tr***@yahoo.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileImageWrapper Standard 1`] = `
<div
  className="sc-iwsKbI eFRUyw"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileInfoWrapper Standard 1`] = `
<div
  className="sc-dnqmqq dkzfjo"
>
  <div
    className="sc-htoDjs haDExK"
    fontSize="16px"
    height="50%"
    width="80%"
  >
    James Wheeler
  </div>
  <div
    className="sc-htoDjs ZUubs"
    fontSize="12px"
    height="50%"
    width="80%"
  >
    larkin_tr***@yahoo.com
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileWrapper Standard 1`] = `
<div
  className="sc-gZMcBi hhlJTS"
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onClick={[Function]}
>
  <div
    className="sc-iwsKbI eFRUyw"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-dnqmqq dkzfjo"
  >
    <div
      className="sc-htoDjs haDExK"
      fontSize="16px"
      height="50%"
      width="80%"
    >
      James Wheeler
    </div>
    <div
      className="sc-htoDjs ZUubs"
      fontSize="12px"
      height="50%"
      width="80%"
    >
      larkin_tr***@yahoo.com
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/SignUpInButtonWrapper Standard 1`] = `
<div
  className="sc-gzVnrw bhQPgz"
>
  <button
    className="sc-bZQynM bKeyVQ"
    onClick={[Function]}
  >
    SIGN UP
  </button>
  <button
    className="sc-bZQynM etdfXU"
    onClick={[Function]}
  >
    LOG IN
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SidePanel/SidePanel Standard 1`] = `
<div
  className="sc-jzJRlG bFUQPj"
>
  <PRFlag.svg />
  <Logo.svg />
  <div
    className="sc-jTzLTM efVEn"
  >
    Voz de Puerto Rico (Voz de PR) is a social platform that allows users to take an active role in the progression of human needs, social betterment and national development of Puerto Rico. It is community based, and provides a voice to those who wish to enact change across society.
  </div>
  <button
    className="sc-fjdhpX lfgnBZ"
  >
    Create Cause
  </button>
  <button
    className="sc-fjdhpX iwvZS"
  >
    Create Post
  </button>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/BottomWrapper Standard 1`] = `
<div
  className="sc-fjdhpX lmElKw"
>
  <div
    className="sc-VigVT edkKCb"
  >
    <svg>
      Bubble.svg
    </svg>
  </div>
  <div
    className="sc-jTzLTM elYBEB"
  >
    12 Comments
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/BubbleWrapper Standard 1`] = `
<div
  className="sc-VigVT edkKCb"
>
  <svg>
    Bubble.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/LeftContent Standard 1`] = `
<div
  className="sc-kpOJdX bklzZ"
>
  <div
    className="sc-chPdSV iqUwwj"
  >
    <div
      className="sc-jzJRlG jAUIYn"
    >
      <svg>
        Userpic.svg
      </svg>
    </div>
    <div
      className="sc-cSHVUG gALDcU"
    >
      
       
      James Wheeler Montgommery McGuiness
    </div>
    <div
      className="sc-cSHVUG gALDcU"
    >
      •
       
      1 Hour Ago
    </div>
    <svg
      className="sc-kAzzGY cCZvCL"
    >
      Delete.svg
    </svg>
  </div>
  <div
    className="sc-kgoBCf cibMDk"
  >
    Puerto Rico - Cherish Its Natural Wonders
  </div>
  <p
    className="sc-kGXeez bwRWEU"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
  </p>
  <div
    className="sc-fjdhpX lmElKw"
  >
    <div
      className="sc-VigVT edkKCb"
    >
      <svg>
        Bubble.svg
      </svg>
    </div>
    <div
      className="sc-jTzLTM elYBEB"
    >
      12 Comments
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/ProfPicSubjectCard Standard 1`] = `
<div
  className="sc-jzJRlG jAUIYn"
>
  <svg>
    Userpic.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/RightContent C 1`] = `
<div
  className="sc-hMqMXs gSWtHi"
>
  <div
    className="sc-jKJlTe IaQDz"
  >
    <div
      className="sc-dxgOiQ dMRUAS"
    >
      147 Votes
    </div>
    <div
      className="sc-ckVGcZ dFaksg"
    >
      Cause
    </div>
  </div>
  <img
    className="sc-eNQAEJ eXCLQw"
    src="PuertoRico_VdPR.jpg"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/RightContent P 1`] = `
<div
  className="sc-hMqMXs gSWtHi"
>
  <div
    className="sc-jKJlTe IaQDz"
  >
    <div
      className="sc-dxgOiQ kNXWuv"
    >
      147 Votes
    </div>
    <div
      className="sc-ckVGcZ jXuUye"
    >
      Post
    </div>
  </div>
  <img
    className="sc-eNQAEJ eXCLQw"
    src="PuertoRico_VdPR.jpg"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/RightContent Standard 1`] = `
<div
  className="sc-hMqMXs gSWtHi"
>
  <div
    className="sc-jKJlTe IaQDz"
  >
    <div
      className="sc-dxgOiQ dMRUAS"
    />
    <div
      className="sc-ckVGcZ dFaksg"
    >
      Cause
    </div>
  </div>
  <img
    className="sc-eNQAEJ eXCLQw"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCard C 1`] = `
<div
  className="sc-kEYyzF iJdNmb"
>
  <div
    className="sc-kpOJdX bklzZ"
  >
    <div
      className="sc-chPdSV iqUwwj"
    >
      <div
        className="sc-jzJRlG jAUIYn"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-cSHVUG gALDcU"
      >
        
         
        James Wheeler Montgommery McGuiness 
      </div>
      <div
        className="sc-cSHVUG gALDcU"
      >
        •
         
        1 hour ago
      </div>
      <svg
        className="sc-kAzzGY cCZvCL"
      >
        Delete.svg
      </svg>
    </div>
    <div
      className="sc-kgoBCf cibMDk"
    >
      Puerto Rico - Cherish Its Natural Wonders
    </div>
    <p
      className="sc-kGXeez bwRWEU"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
    </p>
    <div
      className="sc-fjdhpX lmElKw"
    >
      <div
        className="sc-VigVT edkKCb"
      >
        <svg>
          Bubble.svg
        </svg>
      </div>
      <div
        className="sc-jTzLTM elYBEB"
      >
        12 Comments
      </div>
    </div>
  </div>
  <div
    className="sc-hMqMXs gSWtHi"
  >
    <div
      className="sc-jKJlTe IaQDz"
    >
      <div
        className="sc-dxgOiQ dMRUAS"
      >
        147 Votes
      </div>
      <div
        className="sc-ckVGcZ dFaksg"
      >
        Cause
      </div>
    </div>
    <img
      className="sc-eNQAEJ eXCLQw"
      src="PuertoRico_VdPR.jpg"
    />
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCard P 1`] = `
<div
  className="sc-kEYyzF iJdNmb"
>
  <div
    className="sc-kpOJdX bklzZ"
  >
    <div
      className="sc-chPdSV iqUwwj"
    >
      <div
        className="sc-jzJRlG jAUIYn"
      >
        <svg>
          Userpic.svg
        </svg>
      </div>
      <div
        className="sc-cSHVUG gALDcU"
      >
        
         
        James Wheeler Montgommery McGuiness 
      </div>
      <div
        className="sc-cSHVUG gALDcU"
      >
        •
         
        1 hour ago
      </div>
      <svg
        className="sc-kAzzGY cCZvCL"
      >
        Delete.svg
      </svg>
    </div>
    <div
      className="sc-kgoBCf cibMDk"
    >
      Puerto Rico - Cherish Its Natural Wonders
    </div>
    <p
      className="sc-kGXeez bwRWEU"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
    </p>
    <div
      className="sc-fjdhpX lmElKw"
    >
      <div
        className="sc-VigVT edkKCb"
      >
        <svg>
          Bubble.svg
        </svg>
      </div>
      <div
        className="sc-jTzLTM elYBEB"
      >
        12 Comments
      </div>
    </div>
  </div>
  <div
    className="sc-hMqMXs gSWtHi"
  >
    <div
      className="sc-jKJlTe IaQDz"
    >
      <div
        className="sc-dxgOiQ kNXWuv"
      >
        147 Votes
      </div>
      <div
        className="sc-ckVGcZ jXuUye"
      >
        Post
      </div>
    </div>
    <img
      className="sc-eNQAEJ eXCLQw"
      src="PuertoRico_VdPR.jpg"
    />
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectCardTopLineWrapper Standard 1`] = `
<div
  className="sc-chPdSV iqUwwj"
>
  <div
    className="sc-jzJRlG jAUIYn"
  >
    <svg>
      Userpic.svg
    </svg>
  </div>
  <div
    className="sc-cSHVUG gALDcU"
  >
    
     
    James Wheeler Montgommery McGuiness
  </div>
  <div
    className="sc-cSHVUG gALDcU"
  >
    •
     
    1 Hour Ago
  </div>
  <svg
    className="sc-kAzzGY cCZvCL"
  >
    Delete.svg
  </svg>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectInfoWrapper C 1`] = `
<div
  className="sc-jKJlTe IaQDz"
>
  <div
    className="sc-dxgOiQ dMRUAS"
  >
    193 Votes
  </div>
  <div
    className="sc-ckVGcZ dFaksg"
  >
    Cause
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectInfoWrapper P 1`] = `
<div
  className="sc-jKJlTe IaQDz"
>
  <div
    className="sc-dxgOiQ kNXWuv"
  >
    1000000 Votes
  </div>
  <div
    className="sc-ckVGcZ jXuUye"
  >
    Post
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|SubjectCard/SubjectInfoWrapper Standard 1`] = `
<div
  className="sc-jKJlTe IaQDz"
>
  <div
    className="sc-dxgOiQ dMRUAS"
  >
    TEST
  </div>
  <div
    className="sc-ckVGcZ dFaksg"
  >
    Cause
  </div>
</div>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton Login 1`] = `
<button
  className="sc-bZQynM etdfXU"
  onClick={[Function]}
>
  LOG IN
</button>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton SignUp 1`] = `
<button
  className="sc-bZQynM bKeyVQ"
  onClick={[Function]}
>
  SIGN UP
</button>
`;

exports[`Storyshots Primitive|/Buttons/SignUpInButton Standard 1`] = `
<button
  className="sc-bZQynM etdfXU"
  onClick={[Function]}
/>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileEmail 1`] = `
<div
  className="sc-htoDjs dfBkuE"
  fontSize="12px"
  height="50%"
  width="100%"
>
  larkin_tr***@yahoo.com
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileName 1`] = `
<div
  className="sc-htoDjs fkMuCz"
  fontSize="16px"
  height="50%"
  width="100%"
>
  James Wheeler
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar Standard 1`] = `
<div
  className="sc-htoDjs fCdwiU"
>
  Standard
</div>
`;

exports[`Storyshots Primitive|Buttons/ActionButton C 1`] = `
<button
  className="sc-iAyFgw fnjIJG"
>
  Create Post
</button>
`;

exports[`Storyshots Primitive|Buttons/ActionButton P 1`] = `
<button
  className="sc-iAyFgw fnjIJG"
>
  Create Post
</button>
`;

exports[`Storyshots Primitive|Buttons/ActionButton Standard 1`] = `
<button
  className="sc-iAyFgw gObUCG"
/>
`;

exports[`Storyshots Primitive|Buttons/DeleteSubjectButton DeleteButton 1`] = `
<svg
  className="sc-kAzzGY cCZvCL"
>
  Delete.svg
</svg>
`;

exports[`Storyshots Primitive|Images/Logo Standard 1`] = `
<svg
  className="sc-jTzLTM idQSUd"
>
  Logo.svg
</svg>
`;

exports[`Storyshots Primitive|Images/SubjectImage Standard 1`] = `
<img
  className="sc-eNQAEJ eXCLQw"
  src="PuertoRico_VdPR.jpg"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C&P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes and Posts"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Posts"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar Standard 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search"
/>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Causes 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/causes"
  onClick={[Function]}
>
  CAUSES
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Home 1`] = `
<a
  aria-current="page"
  className="sc-htpNat gaSQtN active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  HOME
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Posts 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/posts"
  onClick={[Function]}
>
  POSTS
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Profile 1`] = `
<a
  aria-current={null}
  className="sc-htpNat gaSQtN"
  href="/profile"
  onClick={[Function]}
>
  PROFILE
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Standard 1`] = `
<a
  aria-current="page"
  className="sc-htpNat gaSQtN active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  TEST
</a>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo Name 1`] = `
<div
  className="sc-cSHVUG gALDcU"
>
  
   
  James Montgommery Wheeler McGuiness
</div>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo Standard 1`] = `
<div
  className="sc-cSHVUG gALDcU"
>
  
   
  Test
</div>
`;

exports[`Storyshots Primitive|Text/NameTimeAgo TimeAgo 1`] = `
<div
  className="sc-cSHVUG gALDcU"
>
  •
   
  1 Hour Ago
</div>
`;

exports[`Storyshots Primitive|text/CommentsIndicator Content 1`] = `
<div
  className="sc-jTzLTM elYBEB"
>
  12 Comments
</div>
`;

exports[`Storyshots Primitive|text/CommentsIndicator Standard 1`] = `
<div
  className="sc-jTzLTM elYBEB"
>
  Test
</div>
`;

exports[`Storyshots Primitive|text/Info Standard 1`] = `
<div
  className="sc-iAyFgw jvxvKT"
>
  Voz de Puerto Rico (Voz de PR) is a social platform that allows users to take an active role in the progression of human needs, social betterment and national development of Puerto Rico. It is community based, and provides a voice to those who wish to enact change across society.
</div>
`;

exports[`Storyshots Primitive|text/SubjectSummary Long Summary 1`] = `
<p
  className="sc-kGXeez bwRWEU"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Magna ac placerat vestibulum lectus mauris ultrices eros in. Tellus id interdum velit laoreet. Sit amet luctus venenatis lectus magna fringilla urna porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Egestas erat imperdiet sed euismod nisi. Vulputate eu scelerisque felis imperdiet. Ante in nibh mauris cursus mattis molestie. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Tortor at auctor urna nunc id cursus. Est ante in nibh mauris cursus mattis molestie a iaculis. Vel pharetra vel turpis nunc eget. Sed pulvinar proin gravida hendrerit. Facilisis leo vel fringilla est ullamcorper eget nulla. Tempus imperdiet nulla malesuada pellentesque. Proin libero nunc consequat interdum varius sit amet mattis. Urna cursus eget nunc scelerisque viverra mauris. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Metus vulputate eu scelerisque felis imperdiet proin. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Id leo in vitae turpis massa sed elementum. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Vel pharetra vel turpis nunc eget lorem. Tellus cras adipiscing enim eu turpis egestas. Tellus in metus vulputate eu. Lacus sed turpis tincidunt id. Neque sodales ut etiam sit amet. Mauris sit amet massa vitae tortor condimentum lacinia quis vel.
</p>
`;

exports[`Storyshots Primitive|text/SubjectSummary Standard 1`] = `
<p
  className="sc-kGXeez bwRWEU"
>
  Test
</p>
`;

exports[`Storyshots Primitive|text/SubjectTitle Long Title 1`] = `
<div
  className="sc-kgoBCf cibMDk"
>
  Puerto Rico - Cherish Its Natural Wonders and Come and Visit Us to See How We Do Things Differently. Our nature is amazing and our people are full of life
</div>
`;

exports[`Storyshots Primitive|text/SubjectTitle Standard 1`] = `
<div
  className="sc-kgoBCf cibMDk"
>
  Test
</div>
`;

exports[`Storyshots Primitive|text/SubjectTitle Title 1`] = `
<div
  className="sc-kgoBCf cibMDk"
>
  Puerto Rico - Cherish Its Natural Wonders
</div>
`;

exports[`Storyshots Primitive|text/SubjectType C 1`] = `
<div
  className="sc-ckVGcZ dFaksg"
>
  Cause
</div>
`;

exports[`Storyshots Primitive|text/SubjectType P 1`] = `
<div
  className="sc-ckVGcZ jXuUye"
>
  Post
</div>
`;

exports[`Storyshots Primitive|text/SubjectType Standard 1`] = `
<div
  className="sc-ckVGcZ dFaksg"
>
  Cause
</div>
`;

exports[`Storyshots Primitive|text/SubjectVotes C 1`] = `
<div
  className="sc-dxgOiQ dMRUAS"
>
  178 Votes
</div>
`;

exports[`Storyshots Primitive|text/SubjectVotes P 1`] = `
<div
  className="sc-dxgOiQ kNXWuv"
>
  178 Votes
</div>
`;

exports[`Storyshots Primitive|text/SubjectVotes Standard 1`] = `
<div
  className="sc-dxgOiQ dMRUAS"
>
  123 Test
</div>
`;
